Feature: Added Fuzzy Finding Closes#: #150

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,7 @@
     <string name="settings_display_app_icon_dots">Show App Icons As Dots</string>
     <string name="settings_display_automatic_keyboard">Auto Show Keyboard</string>
     <string name="settings_display_auto_open_apps">Auto Open Last App</string>
+    <string name="settings_search_from_start">Search From Start</string>
     <string name="settings_display_lock_settings">Lock Settings</string>
 
     <string name="settings_appearance_text_size_title">Size</string>
@@ -128,6 +129,9 @@
 
     <string name="settings_select_search_engine">Select a Search Engine</string>
     <string name="settings_search_engine">Search Engine</string>
+
+    <string name="settings_select_filter_strength">Select a Filter Strength</string>
+    <string name="settings_filter_strength">Filter Strength</string>
 
     <string name="settings_select_launcher_font">Select a Font Family</string>
     <string name="settings_launcher_font">Font Family</string>
