Lang: Updated Language Files. (#158)

--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -75,6 +75,7 @@
     <string name="settings_display_app_icon_dots">Zobrazit ikony aplikací jako tečky</string>
     <string name="settings_display_automatic_keyboard">Automatické zobrazení klávesnice</string>
     <string name="settings_display_auto_open_apps">Automatické otevření poslední aplikace</string>
+    <string name="settings_search_from_start">Hledat od začátku</string>
     <string name="settings_display_lock_settings">Nastavení zámku</string>
     <string name="settings_appearance_text_size_title">Velikost</string>
     <string name="settings_appearance_color_title">Barva</string>
@@ -97,6 +98,8 @@
     <string name="settings_swipe_right">Přejeďte doprava</string>
     <string name="settings_select_search_engine">Vyberte vyhledávač</string>
     <string name="settings_search_engine">Vyhledávač</string>
+    <string name="settings_select_filter_strength">Vyberte sílu filtru</string>
+    <string name="settings_filter_strength">Síla filtru</string>
     <string name="settings_select_launcher_font">Vyberte rodinu písem</string>
     <string name="settings_launcher_font">Rodina písem</string>
     <string name="settings_reload_app_backup">Předvolby zálohovány.</string>
