--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -75,6 +75,7 @@
     <string name="settings_display_app_icon_dots">Mostra le icone delle app come punti</string>
     <string name="settings_display_automatic_keyboard">Mostra automaticamente la tastiera</string>
     <string name="settings_display_auto_open_apps">Apertura automatica dell\'ultima app</string>
+    <string name="settings_search_from_start">Cerca dall\'inizio</string>
     <string name="settings_display_lock_settings">Blocca impostazioni</string>
     <string name="settings_appearance_text_size_title">Misurare</string>
     <string name="settings_appearance_color_title">Colore</string>
@@ -97,6 +98,8 @@
     <string name="settings_swipe_right">Scorri verso destra</string>
     <string name="settings_select_search_engine">Seleziona un motore di ricerca</string>
     <string name="settings_search_engine">Motore di ricerca</string>
+    <string name="settings_select_filter_strength">Seleziona un\'intensità di filtro</string>
+    <string name="settings_filter_strength">Forza del filtro</string>
     <string name="settings_select_launcher_font">Seleziona una famiglia di caratteri</string>
     <string name="settings_launcher_font">Famiglia di font</string>
     <string name="settings_reload_app_backup">Backup delle preferenze.</string>
