--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,6 +95,7 @@
     <string name="settings_display_date">Show Date</string>
     <string name="settings_display_time">Show Time</string>
     <string name="settings_display_battery">Show Battery</string>
+    <string name="settings_display_alarm_clock">Show Alarm Clock</string>
     <string name="settings_display_daily_word">Show Daily Word</string>
     <string name="settings_display_app_icons">Show App Icons</string>
     <string name="settings_display_app_icon_dots">Show App Icons As Dots</string>
@@ -115,6 +116,7 @@
     <string name="appearance_bottom_dialog_desc_date">Date\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_time">Time\u0020:\u0020 </string>
     <string name="appearance_bottom_dialog_desc_app">App\u0020:\u0020</string>
+    <string name="appearance_bottom_dialog_desc_alarm">Alarm\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_word">Word\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_battery">Battery\u0020:\u0020 </string>
 
