--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -70,6 +70,7 @@
     <string name="settings_display_date">Zobrazit datum</string>
     <string name="settings_display_time">Zobrazit čas</string>
     <string name="settings_display_battery">Zobrazit baterii</string>
+    <string name="settings_display_alarm_clock">Zobrazit budík</string>
     <string name="settings_display_daily_word">Zobrazit Daily Word</string>
     <string name="settings_display_app_icons">Zobrazit ikony aplikací</string>
     <string name="settings_display_app_icon_dots">Zobrazit ikony aplikací jako tečky</string>
@@ -87,6 +88,7 @@
     <string name="appearance_bottom_dialog_desc_date">Datum\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_time">Čas\u0020:\u0020 </string>
     <string name="appearance_bottom_dialog_desc_app">Aplikace\u0020:\u0020</string>
+    <string name="appearance_bottom_dialog_desc_alarm">Alarm\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_word">Slovo\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_battery">Baterie\u0020:\u0020 </string>
     <string name="appearance_bottom_dialog_desc_widget_background">Pozadí widgetu\u0020:\u0020</string>
