--- a/app/src/main/res/values-da-rDK/strings.xml
+++ b/app/src/main/res/values-da-rDK/strings.xml
@@ -70,6 +70,7 @@
     <string name="settings_display_date">Vis Dato</string>
     <string name="settings_display_time">Vis Tid</string>
     <string name="settings_display_battery">Vis Batteri</string>
+    <string name="settings_display_alarm_clock">Vis vækkeur</string>
     <string name="settings_display_daily_word">Vis Dagligt Ord</string>
     <string name="settings_display_app_icons">Vis App-ikoner</string>
     <string name="settings_display_app_icon_dots">Vis App-ikoner Som Prikker</string>
@@ -87,6 +88,7 @@
     <string name="appearance_bottom_dialog_desc_date">Dato\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_time">Tid\u0020:\u0020 </string>
     <string name="appearance_bottom_dialog_desc_app">App\u0020:\u0020</string>
+    <string name="appearance_bottom_dialog_desc_alarm">Alarm\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_word">Ord\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_battery">Batteri\u0020:\u0020 </string>
     <string name="appearance_bottom_dialog_desc_widget_background">Widget-baggrund\u0020:\u0020</string>
