--- a/app/src/main/res/values-nl-rNL/strings.xml
+++ b/app/src/main/res/values-nl-rNL/strings.xml
@@ -70,6 +70,7 @@
     <string name="settings_display_date">Datum weergeven</string>
     <string name="settings_display_time">Show Time</string>
     <string name="settings_display_battery">Toon batterij</string>
+    <string name="settings_display_alarm_clock">Wekker weergeven</string>
     <string name="settings_display_daily_word">Toon dagelijks woord</string>
     <string name="settings_display_app_icons">App-pictogrammen weergeven</string>
     <string name="settings_display_app_icon_dots">App-pictogrammen weergeven als stippen</string>
@@ -87,6 +88,7 @@
     <string name="appearance_bottom_dialog_desc_date">Datum\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_time">Tijd\u0020:\u0020 </string>
     <string name="appearance_bottom_dialog_desc_app">App\u0020:\u0020</string>
+    <string name="appearance_bottom_dialog_desc_alarm">Alarm\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_word">Woord\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_battery">Batterij\u0020:\u0020 </string>
     <string name="appearance_bottom_dialog_desc_widget_background">Widgetachtergrond\u0020:\u0020</string>
