--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -137,13 +137,6 @@
     <string name="accessibility_service_name">Služba Easy Launcher Actions Service</string>
     <string name="accessibility_service_desc">Chcete-li v Easy Launcher používat funkci uzamčení dvojitým klepnutím, zapněte prosím službu usnadnění.\n\nToto oprávnění se používá pouze k vypnutí obrazovky. Naše služba přístupnosti
         neshromažďuje ani nesdílí žádná data.</string>
-    <string name="search_default">Výchozí</string>
-    <string name="search_google">Google</string>
-    <string name="search_yahoo">Yahoo</string>
-    <string name="search_duckduckgo">DuckDuckGo</string>
-    <string name="search_bing">Bing</string>
-    <string name="search_brave">Statečný</string>
-    <string name="search_swisscow">SwissCows</string>
     <string name="widgets_battery_level">Úroveň baterie: %d%%</string>
     <string name="widgets_battery_count">Počet nabití baterie: %1$d</string>
     <string name="widgets_battery_current">Proud baterie: %1$.2f %2$s</string>
@@ -156,6 +149,10 @@
     <string name="widgets_settings_show_battery">Widget baterie</string>
     <string name="widgets_settings_display">Zobrazit</string>
     <string name="widgets_settings_select_order">Vyberte Objednat</string>
+    <string name="widget_weather_feels_like">Feels Like : %s%</string>
+    <string name="widget_weather_wind">Wind : %1$.2f %2$s</string>
+    <string name="widget_weather_humidity">Humidity : %d %%</string>
+    <string name="widget_weather_pressure">Pressure : %d hPa</string>
     <string name="acra_crash">Pád</string>
     <string name="acra_dialog_text">Je nám líto, ale %1$s došlo k neočekávanému problému a je třeba ji zavřít. Pomozte nám zlepšit se zasláním zprávy o selhání.\n\n%1$s si váží vašeho soukromí a shromážděná data slouží výhradně ke zlepšení stability aplikace. Neshromažďují se žádné osobní údaje. Děkuji za vaší podporu!</string>
     <string name="acra_send_report">Poslat zprávu</string>
