--- a/app/src/main/res/values-da-rDK/strings.xml
+++ b/app/src/main/res/values-da-rDK/strings.xml
@@ -137,13 +137,6 @@
     <string name="accessibility_service_name">Easy Launcher Actions Service</string>
     <string name="accessibility_service_desc">Slå tilgængelighedstjenesten til for at bruge dobbelttryk for at låse-funktionen i Easy Launcher.\n\nDenne tilladelse bruges kun til at slukke din skærm. Vores
         tilgængelighedstjeneste indsamler eller deler ingen data.</string>
-    <string name="search_default">Misligholdelse</string>
-    <string name="search_google">Google</string>
-    <string name="search_yahoo">Yahoo</string>
-    <string name="search_duckduckgo">DuckDuckGo</string>
-    <string name="search_bing">Bing</string>
-    <string name="search_brave">Brave</string>
-    <string name="search_swisscow">SwissCows</string>
     <string name="widgets_battery_level">Batteriniveau: %d %%</string>
     <string name="widgets_battery_count">Antal batteriladninger: %1$d</string>
     <string name="widgets_battery_current">Batteristrøm: %1$.2f %2$s</string>
@@ -156,6 +149,10 @@
     <string name="widgets_settings_show_battery">Batteri-widget</string>
     <string name="widgets_settings_display">Vise</string>
     <string name="widgets_settings_select_order">Vælg Bestil</string>
+    <string name="widget_weather_feels_like">Feels Like : %s%</string>
+    <string name="widget_weather_wind">Wind : %1$.2f %2$s</string>
+    <string name="widget_weather_humidity">Humidity : %d %%</string>
+    <string name="widget_weather_pressure">Pressure : %d hPa</string>
     <string name="acra_crash">Krak</string>
     <string name="acra_dialog_text">Beklager, %1$s stødte på et uventet problem og blev lukket. Hjælp os med at blive bedre ved at sende en nedbrudsrapport.\n\n%1$s værdsætter dit privatliv, og de indsamlede data bruges udelukkende til at forbedre appens stabilitet. Ingen personlige oplysninger indsamles. Tak for din støtte!</string>
     <string name="acra_send_report">Send Rapport</string>
