--- a/app/src/main/res/values-lt-rLT/strings.xml
+++ b/app/src/main/res/values-lt-rLT/strings.xml
@@ -137,13 +137,6 @@
     <string name="accessibility_service_name">„Easy Launcher“ veiksmų paslauga</string>
     <string name="accessibility_service_desc">Įjunkite pritaikymo neįgaliesiems paslaugą, kad galėtumėte naudoti „Easy Launcher“ funkciją dukart paliesdami užrakinti.\n\nŠis leidimas naudojamas tik ekranui išjungti. Mūsų
         pasiekiamumo paslauga nerenka ir nebendrina jokių duomenų.</string>
-    <string name="search_default">Numatytoji</string>
-    <string name="search_google">Google</string>
-    <string name="search_yahoo">Yahoo</string>
-    <string name="search_duckduckgo">DuckDuckGo</string>
-    <string name="search_bing">Bing</string>
-    <string name="search_brave">Drąsus</string>
-    <string name="search_swisscow">Šveicarijos karvės</string>
     <string name="widgets_battery_level">Baterijos lygis: %d%%</string>
     <string name="widgets_battery_count">Akumuliatoriaus įkrovos skaičius: %1$d</string>
     <string name="widgets_battery_current">Akumuliatoriaus srovė: %1$.2f %2$s</string>
@@ -156,6 +149,10 @@
     <string name="widgets_settings_show_battery">Baterijos valdiklis</string>
     <string name="widgets_settings_display">Ekranas</string>
     <string name="widgets_settings_select_order">Pasirinkite Užsakyti</string>
+    <string name="widget_weather_feels_like">Feels Like : %s%</string>
+    <string name="widget_weather_wind">Wind : %1$.2f %2$s</string>
+    <string name="widget_weather_humidity">Humidity : %d %%</string>
+    <string name="widget_weather_pressure">Pressure : %d hPa</string>
     <string name="acra_crash">Avarija</string>
     <string name="acra_dialog_text">Atsiprašome, bet %1$s susidūrė su netikėta problema ir ją reikia uždaryti. Padėkite mums tobulėti išsiųsdami strigčių ataskaitą.\n\n%1$s vertina jūsų privatumą, o surinkti duomenys naudojami tik programos stabilumui pagerinti. Jokia asmeninė informacija nerenkama. Dėkojame už palaikymą!</string>
     <string name="acra_send_report">Siųsti ataskaitą</string>
