--- a/app/src/main/res/values-sk-rSK/strings.xml
+++ b/app/src/main/res/values-sk-rSK/strings.xml
@@ -137,13 +137,6 @@
     <string name="accessibility_service_name">Služba Easy Launcher Actions Service</string>
     <string name="accessibility_service_desc">Ak chcete použiť funkciu uzamknutia dvojitým klepnutím v aplikácii Easy Launcher, zapnite službu dostupnosti.\n\nToto povolenie sa používa iba na vypnutie obrazovky. Naša služba dostupnosti
         nezhromažďuje ani nezdieľa žiadne údaje.</string>
-    <string name="search_default">Predvolené</string>
-    <string name="search_google">Google</string>
-    <string name="search_yahoo">Yahoo</string>
-    <string name="search_duckduckgo">DuckDuckGo</string>
-    <string name="search_bing">Bing</string>
-    <string name="search_brave">Statočný</string>
-    <string name="search_swisscow">SwissCows</string>
     <string name="widgets_battery_level">Úroveň nabitia batérie: %d%%</string>
     <string name="widgets_battery_count">Počet nabití batérie: %1$d</string>
     <string name="widgets_battery_current">Prúd batérie: %1$.2f %2$s</string>
@@ -156,6 +149,10 @@
     <string name="widgets_settings_show_battery">Widget batérie</string>
     <string name="widgets_settings_display">Displej</string>
     <string name="widgets_settings_select_order">Vyberte položku Objednávka</string>
+    <string name="widget_weather_feels_like">Feels Like : %s%</string>
+    <string name="widget_weather_wind">Wind : %1$.2f %2$s</string>
+    <string name="widget_weather_humidity">Humidity : %d %%</string>
+    <string name="widget_weather_pressure">Pressure : %d hPa</string>
     <string name="acra_crash">Zrútiť sa</string>
     <string name="acra_dialog_text">Ľutujeme, ale %1$s sa vyskytol neočakávaný problém a je potrebné ho zavrieť. Pomôžte nám zlepšiť sa odoslaním správy o zlyhaní.\n\n%1$s si váži vaše súkromie a zhromaždené údaje sa používajú výlučne na zlepšenie stability aplikácie. Nezhromažďujú sa žiadne osobné údaje. Ďakujem za tvoju podporu!</string>
     <string name="acra_send_report">Odoslať správu</string>
