--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_system_language">System</string>
     <!-- Strings used for basic parts of the launcher -->
     <string name="favorite_apps">Favorite Apps</string>
     <string name="hidden_apps">Hidden Apps</string>
@@ -131,6 +132,9 @@
 
     <string name="settings_select_search_engine">Select a Search Engine</string>
     <string name="settings_search_engine">Search Engine</string>
+
+    <string name="settings_select_app_language">Select a App Language</string>
+    <string name="settings_app_language">App Language</string>
 
     <string name="settings_select_filter_strength">Select a Filter Strength</string>
     <string name="settings_filter_strength">Filter Strength</string>
