--- a/app/src/main/res/values-nl-rNL/strings.xml
+++ b/app/src/main/res/values-nl-rNL/strings.xml
@@ -88,7 +88,8 @@
     <string name="appearance_bottom_dialog_alignment_title">Uitlijning</string>
     <string name="appearance_bottom_dialog_desc_date">Datum\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_time">Tijd\u0020:\u0020 </string>
-    <string name="appearance_bottom_dialog_desc_app">App\u0020:\u0020</string>
+    <string name="appearance_bottom_dialog_desc_app">Toepassingen\u0020:\u0020</string>
+    <string name="appearance_bottom_dialog_desc_app_group">Apps-groep\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_alarm">Alarm\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_word">Woord\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_battery">Batterij\u0020:\u0020 </string>
